// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer FormFooter should render form footer 1`] = `
<DocumentFragment>
  <div />
  <div>
    <button
      class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 bkfsAJ"
      type="button"
    >
      <span>
        Cancel
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 bkfsAJ"
      type="button"
    >
      <span>
        Save
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Drawer should match snapshot for basic drawer 1`] = `
Array [
  <div
    aria-modal="true"
    class="ant-drawer-content"
    role="dialog"
  >
    <div
      class="ant-drawer-wrapper-body"
    >
      <div
        class="ant-drawer-header"
      >
        <div
          class="ant-drawer-header-title"
        >
          <button
            aria-label="Close"
            class="ant-drawer-close"
            type="button"
          >
            <svg
              data-testid="CloseSymbol"
            />
          </button>
          <div
            class="ant-drawer-title"
          >
            <div
              class="sc-dkzDqf bnYHGr"
            >
              Test Drawer
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-drawer-body"
      >
        <p>
          some content
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`Drawer should match snapshot for custom drawer 1`] = `
Array [
  <div
    aria-modal="true"
    class="ant-drawer-content"
    role="dialog"
  >
    <div
      class="ant-drawer-wrapper-body"
    >
      <div
        class="ant-drawer-header"
      >
        <div
          class="ant-drawer-header-title"
        >
          <button
            aria-label="Close"
            class="ant-drawer-close"
            type="button"
          >
            <svg
              data-testid="CloseSymbol"
            />
          </button>
          <div
            class="ant-drawer-title"
          >
            <button
              class="sc-gsnTZi jxJcEp"
            >
              <svg
                data-testid="ArrowBack"
              />
              Back
            </button>
            <div
              class="sc-dkzDqf bnYHGr"
            >
              <svg
                data-testid="BulbOutlined"
              />
              Test Drawer
            </div>
            <div
              class="sc-hKMtZM gfHSAl"
            >
              Test Drawer Subtitle
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-drawer-body"
      >
        <p>
          some content
        </p>
      </div>
    </div>
  </div>,
]
`;
